# aptos-pollard-kangaroo

./: Cargo.toml  README.md  build.rs
benches/: kangaroo.rs
src/: generator.rs  kangaroo.rs  lib.rs  solver.rs  utils.rs
src/kangaroo/: generator.rs  presets.rs  solver.rs
src/kangaroo/rsc/: table_16  table_32  table_48
tests/: kangaroo_tests.rs
