[package]
name = "pollard-kangaroo"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek-ng = { version = "4", features = ["serde"] }
anyhow = { version = "1", default-features = false }
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3.12.0" }
bincode = { version = "1.3.3" }
