[package]
name = "pollard-kangaroo"
version = "0.1.0"
edition = "2021"

[features]
default = []
serde = ["dep:serde", "dep:serde_with"]
presets = ["serde", "dep:bincode"]
table16 = ["presets", "serde"]
table32 = ["presets", "serde"]
table48 = ["presets", "serde"]

[dependencies]
curve25519-dalek-ng = { version = "4", features = ["serde"] }
anyhow = { version = "1", default-features = false }
rand_core = { version = "0.6", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
serde_with = { version = "3.12.0", optional = true }
bincode = { version = "1.3.3", optional = true }
web-time = { version = "1.1" }