[package]
name = "pollard-kangaroo"
version = "0.1.0"
edition = "2021"

[features]
default = ["table16", "table32", "table48"]
serde = ["dep:serde", "dep:serde_with"]
presets = ["serde", "dep:bincode"]
table16 = ["presets"]
table32 = ["presets"]
table48 = ["presets"]

[dependencies]
curve25519-dalek-ng = { version = "4", features = ["serde"] }
anyhow = { version = "1", default-features = false }
rand_core = { version = "0.6", default-features = false }
serde = { version = "1", features = ["derive"], optional = true }
serde_with = { version = "3.12", optional = true }
bincode = { version = "1.3.3", optional = true }
web-time = { version = "1.1" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "kangaroo"
harness = false
